fix: 모달 내 드롭 다운 z-index 수정 (#82)

--- a/containers/dashboard/id/dropdown/Dropdown.module.scss
+++ b/containers/dashboard/id/dropdown/Dropdown.module.scss
@@ -1,4 +1,5 @@
 @import '@/styles/animations';
+@import '@/styles/levels';
 
 .fade-in {
   overflow: hidden;
@@ -15,4 +16,8 @@
 .fade-out > ul {
   animation: slide-fade-out-dropdown-animation 0.4s ease;
   animation-fill-mode: forwards;
+}
+
+.dropdown {
+  z-index: $drop-down-menu;
 }
